# stuff-tracker

./: README.md  deploy.sh  dev.sh  lint.sh  nginx.conf  setup_infra.sh
client/: .eslintrc.cjs  index.html  package-lock.json  package.json  vite.config.ts
client/.husky/: pre-commit
client/src/: App.tsx
client/src/api/: client.ts  mockClient.ts
client/src/components/: CategoryCard.tsx  ConfirmDialog.tsx  FloatingActionButton.tsx  ImageUpload.tsx  ItemCard.tsx  Layout.tsx  RankMode.tsx  RankingFlow.tsx  RatingButton.tsx
client/src/pages/: CategoryList.tsx  Home.tsx  ItemEditor.tsx  Login.tsx
client/src/types/: index.ts
server/: .gitignore  Cargo.toml  README.md  stuff-tracker.service
server/migrations/: 20230101000000_initial_setup.sql  20260106210000_make_rank_nullable.sql  20260107000001_add_user_id.sql  20260111000000_recreate_schema.sql
server/src/: auth.rs  handlers.rs  lib.rs  main.rs  models.rs  ranking.rs  upload.rs
server/tests/: api_tests.rs  security_tests.rs
