[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = { version = "0.5.3", features = ["std"] }
axum = { version = "0.8.8", features = ["multipart"] }
axum-extra = { version = "0.12.5", features = ["typed-header"] }
chrono = { version = "0.4.42", features = ["serde"] }
dotenvy = "0.15.7"
image = "0.25.9"
jsonwebtoken = "9.3"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["chrono", "runtime-tokio-rustls", "sqlite"] }
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors", "fs", "trace"] }
tracing-subscriber = "0.3.22"
uuid = { version = "1.19.0", features = ["serde", "v4"] }

[dev-dependencies]
reqwest = { version = "0.13.1", features = ["json"] }
tower = { version = "0.5.2", features = ["util"] }
